--- a/.github/workflows/ci-monitoring.yml
+++ b/.github/workflows/ci-monitoring.yml
@@ -10,60 +10,59 @@ on:
       - 'feature/*'
   pull_request:
     branches: [ main ]
-
+ 
 jobs:
   test-and-report:
     name: Tests + Allure Report
     runs-on: ubuntu-latest
-
+ 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        cache: 'pip'
-
-    - name: Install dependencies
-      run: |
-        pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name : Install Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
-
-    - name: Install Allure Commandline
-      run: |
-        npm install -g allure-commandline
-        allure --version
-
-    - name: Run tests with Allure reporting
-      run: |
-        pytest tests/ -v --alluredir=reports
-      continue-on-error: true
-
-    - name: Generate Allure report
-      if: always()
-      run: |
-        allure generate reports --clean -o allure-report
-
-    - name: Upload des résultats Allure (JSON)
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: allure-results
-        path: reports/
-        retention-days: 30
-
-    - name : Upload Allure HTML Report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: allure-html-report
-        path: allure-report/
-        retention-days: 30
+      - name: Checkout repository
+        uses: actions/checkout@v4
+ 
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+ 
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+ 
+      - name: Setup Node.js (pour Allure CLI)
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+ 
+      - name: Install Allure CLI
+        run: |
+          npm install -g allure-commandline --no-save
+          allure --version
+ 
+      - name: Run tests (pytest -> Allure results)
+        run: pytest tests/ -v --alluredir=reports
+        continue-on-error: true
+ 
+      - name: Generate Allure HTML report
+        if: always()
+        run: |
+          # Génère le rapport HTML à partir des résultats Allure
+          allure generate reports --clean -o allure-report
+ 
+      - name: Upload Allure results (JSON)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results
+          path: reports/
+          retention-days: 30
+ 
+      - name: Upload Allure HTML report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-html-report
+          path: allure-report/
+          retention-days: 30
